# cohere-rust-client

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yaml
cohere_rust_client/: __init__.py  base.py  client.py  utils.py
examples/: basic_usage.py
